# daemon

./: .gitignore  CMakeLists.txt  TODO  shell.nix
appliancectl/: app.c  commands.h  common.c  container.c  flock.c  main.c  persona.c
applianced/: application.c  application.h  avahi.c  avahi.h  bridge.c  bridge.h  channel.h  configuration.c  configuration.h  container.c  container.h  flock.c  flock.h  local.c  local.h  main.c  nat.c  nat.h  pconn.c  pconn.h  persona.c  persona.h  state.c  state.h  token.c  token.h  update.c  update.h
applianced/tests/: main.c  token.c
common/: buffer.c  buffer.h  directory.c  dns.h  download.c  download.h  dtls.c  dtls.h  event.c  event.h  init_proto.h  intrustd_proto.h  local_proto.h  persona_format.h  process.c  process.h  sdp.c  sdp.h  static_bio.c  storkd_proto.h  stun.c  stun.h  util.c  util.h  words.h
common/tests/: shared-test.c  timer-test.c
deploy/: deploy-app  deploy-aws.nix  deploy-flockd  deploy-vbox.nix  deploy.nix  hydra.nix  local-flock  local-nginx.conf
deploy/modules/: flockd.nix  overrides.nix
deploy/pkgs/: certbot-dns-route53.nix  kite.nix  le-s3front.nix  lksctp-tools.nix
docs/: flock-proto.md
flockd/: appliance.c  appliance.h  client.c  client.h  configuration.c  configuration.h  connection.c  connection.h  main.c  personas.c  personas.h  proto.h  service.c  service.h  state.c  state.h  websocket.c  websocket.h
init/: CMakeLists.txt  app_instance.c  init_common.c  init_common.h  persona.c
nix/: build-bundle.nix  build-hydra.nix  hydra-app-jobsets.nix  result  sign  start-container  test.scm
nix/lib/: intrustd.nix  kite.nix
nix/lib/services/: httpd.nix  inetd.nix  lighttpd.nix  nginx.nix  redis.nix  uwsgi.nix
nix/modules/: permissions.nix  supervisord.nix  top-level.nix
stork-js/: index.html  index.js  package-lock.json  package.json  webpack.config.js
stork-js/src/: ApplianceChooser.js  Authenticator.js  Authenticator.scss  Flock.js  FlockClient.js  FlockConnection.js  FlockProtocol.js  Logins.js  Portal.js  Portal.scss  mithril.js  react.js
stork-js/src/polyfill/: Cache.js  Common.js  FetchApi.js  Install.js  Streams.js  XhrApi.js
storkd/: CMakeLists.txt
storkd/src/: #proto.hpp#  appliance.cpp  appliance.hpp  backend.cpp  backend.hpp  backend_common.cpp  local_api.cpp  local_api.hpp  local_proto.cpp  local_proto.hpp  main.cpp  nix.cpp  nix.hpp  persona.hpp  proto.cpp  proto.hpp  queue.hpp  random.hpp  storkctl.cpp  unarchiver.cpp  unarchiver.hpp  uri.cpp  uri.hpp  uri_endpoint.hpp  websocket.hpp  words.hpp
storkd/src/application/: application.cpp  application.hpp  installer.cpp  installer.hpp  manager.cpp  manager.hpp  manifest.cpp
storkd/src/container/: app_instance.cpp  app_instance.hpp  bridge.cpp  bridge.hpp  container.cpp  container.hpp  ethernet.hpp  init.cpp  init.hpp  manager.cpp  manager.hpp  persona.cpp  persona.hpp  runtime.cpp  runtime.hpp
storkd/src/crypto/: certificate.cpp  certificate.hpp  context.cpp  context.hpp
storkd/src/flock/: appliance_proto.cpp  appliance_proto.hpp  backend.cpp  backend.hpp  client.hpp  configuration.cpp  configuration.hpp  device.hpp  flockd.cpp  manager.cpp  manager.hpp  proto.cpp  proto.hpp  registry.cpp  registry.hpp
storkd/src/peer/: api.hpp  certificate.cpp  certificate.hpp  checklist.hpp  connectivity.hpp  dtls.cpp  dtls.hpp  ice.cpp  ice.hpp  initiator.cpp  initiator.hpp  interface.cpp  interface.hpp  parse_utils.hpp  push_pull_socket.cpp  push_pull_socket.hpp  service.hpp  session.cpp  session.hpp  stun.cpp  stun.hpp  webrtc.cpp  webrtc.hpp
storkd/src/persona/: profile.cpp  profile.hpp
storkd/src/sctp/: manager.cpp  manager.hpp  packet.cpp  packet.hpp  port.cpp  proto.cpp  proto.hpp  socket.hpp
storkd/src/storkctl/: application_command.cpp  application_command.hpp  command.cpp  command.hpp  flock_command.cpp  flock_command.hpp  persona_command.cpp  persona_command.hpp
storkd/src/thrift/: StorkdLocal.cpp  StorkdLocal.h  StorkdLocal_server.skeleton.cpp  storkd_constants.cpp  storkd_constants.h  storkd_types.cpp  storkd_types.h
storkd/src/util/: array.hpp  fd.cpp  fd.hpp  heap.hpp
storkd/test/: main.cpp  session.cpp
webrtc-proxy/: CMakeLists.txt  main.c  webrtc.h
